# kydpdict

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.in  README  README.md  TODO  aclocal.m4  bootstrap  build_macosx.sh  configure  configure.in  kydpdict.desktop  kydpdict.spec
config/: qt.m4
contrib/: kydpdict.1  kydpdict.pl.1  oxpwnsnd.txt
icons/: babelfish.xpm  babelfish_small.xpm  clear_left.xpm  clipboard.xpm  conf.xpm  configure.xpm  de_pl.xpm  de_pl_dis.xpm  en_pl.xpm  en_pl_dis.xpm  exit.xpm  f1.xpm  f10.xpm  f11.xpm  f2.xpm  f3.xpm  f4.xpm  f5.xpm  f6.xpm  f7.xpm  f8.xpm  f9.xpm  help.xpm  loop.xpm  pl_de.xpm  pl_de_dis.xpm  pl_en.xpm  pl_en_dis.xpm  player_play.xpm
icons/unused/: erase_left.xpm  erase_right.xpm  tux.xpm
lib/: dvp_1.dic  dvp_2.dic
src/: .cvsignore  Makefile.in  dock_widget.cpp  dock_widget.h  engine_dict.cpp  engine_dict.h  engine_pwn.cpp  engine_pwn.h  engine_pwn2004.cpp  engine_pwn2004.h  engine_sap.cpp  engine_sap.h  engine_ydp.cpp  engine_ydp.h  kdynamictip.cpp  kdynamictip.h  kydpconfig.cpp  kydpconfig.h  kydpdict.cpp  kydpdict.h  kydpdict.pro  kydpdict_pl.ts  main.cpp  pwn-tooltips.h  tips.h  tips.html  ydp-tooltips.h  ydpconfigure.cpp  ydpconfigure.h  ydpconverter.cpp  ydpconverter.h  ydpdictionary.cpp  ydpdictionary.h  ydpfuzzysearch.cpp  ydpfuzzysearch.h
